@@ -41,6 +41,7 @@ Release 0.8.7
 - renamed ZMAjaxProductController to ZMAjaxCatalogController
 - remove obsolete ZMAjaxCatalogController::getAttributesForProductIdJSON()
 - make zm_ajax_href work in admin pages
+- make themeId case sensitive
 
 Release 0.8.6.1
 - fix hardcoded tablename in ZMBanners; #1856664
